# pocket_based_ligand_screener

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
data/drd5_example/: C1_.xplor  C3.xplor
dock_ligand_annotator/: __init__.py  config.py  functional_groups.py  interaction_utils.py  interactions.py  io.py  types.py
dock_ligand_annotator/dock_ligand_annotator/: ifg.py  interaction_utils.py  io_utils.py  mda_utils.py
dock_ligand_annotator/dock_ligand_annotator/classes/: interactions.py
dock_ligand_annotator/dock_ligand_annotator/tests/: conftest.py  test_config_utils.py  test_interaction_utils.py  test_interactions.py  test_io_utils.py  test_mda_utils.py
notebooks/: combined_screening_example.ipynb  dock_ligand_annotator_example.ipynb  example.ipynb  residue_contact_scorer_example.ipynb  water_annotator_example.ipynb
pocket_ligand_screener/screener/: __init__.py  combined.py  interaction_filter.py  residue_contact.py  surface_overlap.py  water_displacement.py
pocket_ligand_screener/standardiser/: __init__.py  base.py  glide.py
result/: annotated_interactions.csv
tests/: conftest.py  test_config.py  test_interaction_filter.py  test_interaction_utils.py  test_interactions.py  test_io.py  test_screener.py  test_standardiser.py  test_water_annotator.py  test_water_displacement.py  test_waterflap_annotator.py
tests/test_data/: example_ligands.sdf  glide_real_sdf_1.sdf  test_config_file.yaml
water_annotator/: __init__.py  base.py  waterflap.py  watermap.py
water_annotator/standardiser/: __init__.py  base.py  watermap.py
(+6 files in other folders)
